--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,10 +8,9 @@ Description: The project aims to compare different classification methods.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
-Imports: Amelia, corrplot, caTools, e1071, class, Hmisc, gmodels, tidyverse, caret, nnet, devtools
+Imports: Amelia, corrplot, caTools, e1071, class, Hmisc, gmodels, tidyverse, caret, nnet, devtools, dplyr
 Suggests: 
-    testthat (>= 3.0.0),
-    dplyr
+    testthat (>= 3.0.0)
 RoxygenNote: 7.1.2
 Config/testthat/edition: 3
 URL: https://github.com/KacperSadzynski/Classification
